@@ -1,5 +1,9 @@
 2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-install.in: Don't use uhci outside of x86.
+
+2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-mkrescue.in: Add missing quotes.
 
 2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>
